--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@
 }
 *{
   box-sizing: border-box;
-  font-family: "vazir",Roboto;
+  font-family: "vazir",Roboto,sans-serif ;
 }
 body{
   overflow-x: hidden;
